localedata: Use consistent values for grouping and mon_grouping

Resolves: BZ # 31205

Adapt test cases in test-grouping_iterator.c